[gd_scene load_steps=10 format=3 uid="uid://cwensks5asunm"]

[ext_resource type="Texture2D" uid="uid://capn7wain57ar" path="res://assets/square_set.png" id="1_gh6g0"]
[ext_resource type="Script" path="res://tile_map.gd" id="2_gse5h"]
[ext_resource type="Texture2D" uid="uid://wyve4t5bny04" path="res://assets/square_background.png" id="2_kl8ow"]
[ext_resource type="Script" path="res://PieceQueue.gd" id="3_mcdbq"]
[ext_resource type="Script" path="res://InputHandler.gd" id="3_ymcug"]
[ext_resource type="Script" path="res://Score.gd" id="6_luysm"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2c3e3"]
texture = ExtResource("1_gh6g0")
texture_region_size = Vector2i(8, 8)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/1 = 1
0:0/1/modulate = Color(0, 1, 1, 1)
0:0/2 = 2
0:0/2/modulate = Color(1, 1, 0, 1)
0:0/3 = 3
0:0/3/modulate = Color(0.501961, 0, 0.501961, 1)
0:0/4 = 4
0:0/4/modulate = Color(0, 1, 0, 1)
0:0/5 = 5
0:0/5/modulate = Color(1, 0, 0, 1)
0:0/6 = 6
0:0/6/modulate = Color(0, 0, 1, 1)
0:0/7 = 7
0:0/7/modulate = Color(1, 0.498039, 0, 1)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3pvtj"]
texture = ExtResource("2_kl8ow")
texture_region_size = Vector2i(8, 8)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_sxls5"]
tile_size = Vector2i(8, 8)
sources/0 = SubResource("TileSetAtlasSource_2c3e3")
sources/1 = SubResource("TileSetAtlasSource_3pvtj")

[node name="TileMap" type="TileMap"]
position = Vector2(489, 127)
scale = Vector2(2, 2)
tile_set = SubResource("TileSet_sxls5")
format = 2
layer_0/name = "background"
layer_0/tile_data = PackedInt32Array(1376256, 1, 0, 1310720, 1, 0, 1245184, 1, 0, 1179648, 1, 0, 1114112, 1, 0, 1048576, 1, 0, 983040, 1, 0, 917504, 1, 0, 851968, 1, 0, 786432, 1, 0, 720896, 1, 0, 655360, 1, 0, 589824, 1, 0, 524288, 1, 0, 458752, 1, 0, 393216, 1, 0, 327680, 1, 0, 262144, 1, 0, 196608, 1, 0, 131072, 1, 0, 65536, 1, 0, 0, 1, 0, 1, 1, 0, 65537, 1, 0, 131073, 1, 0, 196609, 1, 0, 262145, 1, 0, 327681, 1, 0, 393217, 1, 0, 458753, 1, 0, 524289, 1, 0, 589825, 1, 0, 655361, 1, 0, 720897, 1, 0, 786433, 1, 0, 851969, 1, 0, 917505, 1, 0, 983041, 1, 0, 1048577, 1, 0, 1114113, 1, 0, 1179649, 1, 0, 1245185, 1, 0, 1310721, 1, 0, 1376257, 1, 0, 1376258, 1, 0, 1310722, 1, 0, 1245186, 1, 0, 1179650, 1, 0, 1114114, 1, 0, 1048578, 1, 0, 983042, 1, 0, 917506, 1, 0, 851970, 1, 0, 786434, 1, 0, 720898, 1, 0, 655362, 1, 0, 589826, 1, 0, 524290, 1, 0, 458754, 1, 0, 393218, 1, 0, 327682, 1, 0, 262146, 1, 0, 196610, 1, 0, 131074, 1, 0, 65538, 1, 0, 2, 1, 0, 3, 1, 0, 65539, 1, 0, 131075, 1, 0, 196611, 1, 0, 262147, 1, 0, 327683, 1, 0, 393219, 1, 0, 458755, 1, 0, 524291, 1, 0, 589827, 1, 0, 655363, 1, 0, 720899, 1, 0, 786435, 1, 0, 851971, 1, 0, 917507, 1, 0, 983043, 1, 0, 1048579, 1, 0, 1114115, 1, 0, 1179651, 1, 0, 1245187, 1, 0, 1310723, 1, 0, 1376259, 1, 0, 1376260, 1, 0, 1310724, 1, 0, 1245188, 1, 0, 1179652, 1, 0, 1114116, 1, 0, 1048580, 1, 0, 983044, 1, 0, 917508, 1, 0, 851972, 1, 0, 786436, 1, 0, 720900, 1, 0, 655364, 1, 0, 589828, 1, 0, 524292, 1, 0, 458756, 1, 0, 393220, 1, 0, 327684, 1, 0, 262148, 1, 0, 196612, 1, 0, 131076, 1, 0, 65540, 1, 0, 4, 1, 0, 5, 1, 0, 65541, 1, 0, 131077, 1, 0, 196613, 1, 0, 262149, 1, 0, 327685, 1, 0, 393221, 1, 0, 458757, 1, 0, 524293, 1, 0, 589829, 1, 0, 655365, 1, 0, 720901, 1, 0, 786437, 1, 0, 851973, 1, 0, 917509, 1, 0, 983045, 1, 0, 1048581, 1, 0, 1114117, 1, 0, 1179653, 1, 0, 1245189, 1, 0, 1310725, 1, 0, 1376261, 1, 0, 1376262, 1, 0, 1310726, 1, 0, 1245190, 1, 0, 1179654, 1, 0, 1114118, 1, 0, 1048582, 1, 0, 983046, 1, 0, 917510, 1, 0, 851974, 1, 0, 786438, 1, 0, 720902, 1, 0, 655366, 1, 0, 589830, 1, 0, 524294, 1, 0, 458758, 1, 0, 393222, 1, 0, 327686, 1, 0, 262150, 1, 0, 196614, 1, 0, 131078, 1, 0, 65542, 1, 0, 6, 1, 0, 7, 1, 0, 65543, 1, 0, 131079, 1, 0, 196615, 1, 0, 262151, 1, 0, 327687, 1, 0, 393223, 1, 0, 458759, 1, 0, 524295, 1, 0, 589831, 1, 0, 655367, 1, 0, 720903, 1, 0, 786439, 1, 0, 851975, 1, 0, 917511, 1, 0, 983047, 1, 0, 1048583, 1, 0, 1114119, 1, 0, 1179655, 1, 0, 1245191, 1, 0, 1310727, 1, 0, 1376263, 1, 0, 1376264, 1, 0, 1310728, 1, 0, 1245192, 1, 0, 1179656, 1, 0, 1114120, 1, 0, 1048584, 1, 0, 983048, 1, 0, 917512, 1, 0, 851976, 1, 0, 786440, 1, 0, 720904, 1, 0, 655368, 1, 0, 589832, 1, 0, 524296, 1, 0, 458760, 1, 0, 393224, 1, 0, 327688, 1, 0, 262152, 1, 0, 196616, 1, 0, 131080, 1, 0, 65544, 1, 0, 8, 1, 0, 9, 1, 0, 65545, 1, 0, 131081, 1, 0, 196617, 1, 0, 262153, 1, 0, 327689, 1, 0, 393225, 1, 0, 458761, 1, 0, 524297, 1, 0, 589833, 1, 0, 655369, 1, 0, 720905, 1, 0, 786441, 1, 0, 851977, 1, 0, 917513, 1, 0, 983049, 1, 0, 1048585, 1, 0, 1114121, 1, 0, 1179657, 1, 0, 1245193, 1, 0, 1310729, 1, 0, 1376265, 1, 0)
layer_1/name = "existing_tiles"
layer_1/tile_data = PackedInt32Array()
layer_2/name = "ghost_piece"
layer_2/modulate = Color(1, 1, 1, 0.52549)
layer_2/tile_data = PackedInt32Array()
layer_3/name = "current_piece"
layer_3/tile_data = PackedInt32Array()
layer_4/name = "HUD"
layer_4/tile_data = PackedInt32Array()
script = ExtResource("2_gse5h")

[node name="PieceDropTimer" type="Timer" parent="."]

[node name="PieceQueue" type="Node" parent="."]
script = ExtResource("3_mcdbq")

[node name="InputHandler" type="Node" parent="."]
script = ExtResource("3_ymcug")

[node name="DASLeftTimer" type="Timer" parent="InputHandler"]

[node name="DASRightTimer" type="Timer" parent="InputHandler"]

[node name="ARRLeftTimer" type="Timer" parent="InputHandler"]

[node name="ARRRightTimer" type="Timer" parent="InputHandler"]

[node name="SDRTimer" type="Timer" parent="InputHandler"]

[node name="Score" type="Label" parent="."]
offset_left = 13.0
offset_top = -24.5
offset_right = 68.0
offset_bottom = -1.5
text = "0"
horizontal_alignment = 1
script = ExtResource("6_luysm")

[connection signal="timeout" from="PieceDropTimer" to="." method="_on_piece_drop_timer_timeout"]
[connection signal="hard_drop" from="InputHandler" to="." method="hard_drop"]
[connection signal="hold_piece" from="InputHandler" to="." method="hold_piece"]
[connection signal="max_move" from="InputHandler" to="." method="max_move"]
[connection signal="move" from="InputHandler" to="." method="move"]
[connection signal="rotate_180" from="InputHandler" to="." method="rotate_180"]
[connection signal="rotate_clockwise" from="InputHandler" to="." method="rotate_clockwise"]
[connection signal="rotate_counterclockwise" from="InputHandler" to="." method="rotate_counterclockwise"]
[connection signal="timeout" from="InputHandler/DASLeftTimer" to="InputHandler" method="_on_das_left_timer_timeout"]
[connection signal="timeout" from="InputHandler/DASRightTimer" to="InputHandler" method="_on_das_right_timer_timeout"]
[connection signal="timeout" from="InputHandler/ARRLeftTimer" to="InputHandler" method="_on_arr_left_timer_timeout"]
[connection signal="timeout" from="InputHandler/ARRRightTimer" to="InputHandler" method="_on_arr_right_timer_timeout"]
[connection signal="timeout" from="InputHandler/SDRTimer" to="InputHandler" method="_on_sdr_timer_timeout"]
